2007-11-01  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c: (phonemgr_utils_get_channel):
	Use channel 1 if no channel is listed in the discovery,
	some Nokia phones don't show channel 1, little buggers

2007-11-01  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phones.xml: Add the Sony Ericsson K800i to the list
	(Closes: #492378)

2007-11-01  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_battery_poll):
	Fix calculation of battery level when the driver uses arbitrary
	units

2007-10-31  Bastien Nocera  <hadess@hadess.net>

	* src/e-contact-entry.c: (completion_match_selected_cb):
	Update from contact-lookup-applet, thanks Ross!
	(Closes: #491440)

2007-10-30  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c: (get_rfcomm_channel),
	(find_service_channel), (phonemgr_utils_get_channel): 
	Look for the Serial port channel before looking for DUN one,
	and ignore the "Nokia PC Suite" service, as it's useless to us
	(Closes: #491526)

2007-10-30  Bastien Nocera  <hadess@hadess.net>

	* README: Add web page address, thanks Kjartan

============ Version 0.30

2007-10-29  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.30

2007-10-29  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_queue_message):
	Fix sending texts that don't fit in the default GSM alphabet,
	gnokii expects UTF-8, and will convert to UCS-2 itself

2007-10-29  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_queue_message):
	Zero-out the SMS data after having sent the message

2007-10-29  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_emit_message),
	(phonemgr_listener_connect), (phonemgr_listener_queue_message):
	When receiving texts, they will be in GSM alphabet if it fits
	in the alphabet (fixes receiving SMS from ISO8859-1 texts),